@@ -9,6 +9,25 @@
     </parent>
 	<artifactId>loadui-integration-tests</artifactId>
 	<name>loadUI Integration Tests</name>
+
+    <profiles>
+        <profile>
+            <id>int-tests</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <artifactId>maven-failsafe-plugin</artifactId>
+                        <version>2.14.1</version>
+                        <configuration>
+                            <groups>com.eviware.loadui.test.categories.IntegrationTest</groups>
+                            <argLine>-Xms256m -Xmx1024m -XX:MaxPermSize=128M</argLine>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
+    
 	<build>
 		<plugins>
 			<plugin>
@@ -16,6 +35,7 @@
 				<artifactId>maven-surefire-plugin</artifactId>
                 <version>2.14.1</version>
 				<configuration>
+               <excludedGroups>com.eviware.loadui.test.categories.IntegrationTest</excludedGroups>
 					<forkMode>pertest</forkMode>
 				</configuration>
 			</plugin>
@@ -70,39 +90,39 @@
                     </execution>
                 </executions>
             </plugin>
-		</plugins>
-	</build>
-	<dependencies>
-		<dependency>
-			<groupId>org.apache.felix</groupId>
-			<artifactId>org.apache.felix.main</artifactId>
-			<version>4.0.2</version>
-		</dependency>
-		<dependency>
-			<groupId>commons-httpclient</groupId>
-			<artifactId>commons-httpclient</artifactId>
-			<version>3.1</version>
-		</dependency>
-		<dependency>
-			<groupId>com.eviware.loadui</groupId>
-			<artifactId>loadui-api</artifactId>
-			<version>${project.parent.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>com.eviware.loadui</groupId>
-			<artifactId>loadui-test-utils</artifactId>
-			<version>${project.parent.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>com.eviware.loadui</groupId>
-			<artifactId>loadui-launcher</artifactId>
-			<version>${project.parent.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>commons-cli</groupId>
-			<artifactId>commons-cli</artifactId>
-			<version>1.2</version>
-		</dependency>
+        </plugins>
+    </build>
+    <dependencies>
+        <dependency>
+            <groupId>org.apache.felix</groupId>
+            <artifactId>org.apache.felix.main</artifactId>
+            <version>4.0.2</version>
+        </dependency>
+        <dependency>
+            <groupId>commons-httpclient</groupId>
+            <artifactId>commons-httpclient</artifactId>
+            <version>3.1</version>
+        </dependency>
+        <dependency>
+            <groupId>com.eviware.loadui</groupId>
+            <artifactId>loadui-api</artifactId>
+            <version>${project.parent.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.eviware.loadui</groupId>
+            <artifactId>loadui-test-utils</artifactId>
+            <version>${project.parent.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.eviware.loadui</groupId>
+            <artifactId>loadui-launcher</artifactId>
+            <version>${project.parent.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>commons-cli</groupId>
+            <artifactId>commons-cli</artifactId>
+            <version>1.2</version>
+        </dependency>
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-io</artifactId>
